# takeout-rater

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.ci  README.md  pyproject.toml  run  run.bat  run.command
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-ci-image.yml
docs/: design.md
docs/agents/: db-guidelines.md  definition-of-done.md  how-to-add-a-scorer.md  performance-budgets.md  repo-map.md
docs/decisions/: ADR-0001-local-web-ui-fastapi.md  ADR-0002-sqlite-metadata-store.md  ADR-0003-scorer-plugin-architecture.md  ADR-0004-library-state-location.md  ADR-0005-v1-filtering-sorting-no-dsl.md  ADR-0006-facial-detection-model-selection.md
docs/history/: 2026-03-21_takeout_rater_project_design_and_setup.md  2026-03-21_takeout_rater_project_design_and_setup_curated.md  sat_mar_21_2026_takeout_rater_project_design_and_setup.md  sat_mar_21_2026_takeout_rater_project_design_and_setup_curated.md
docs/tools/: README.md  infer_takeout_sidecar_schema.py
scripts/: launcher.py
src/takeout_rater/: __init__.py  __main__.py  cli.py  config.py  similarity.py
src/takeout_rater/api/: __init__.py  albums.py  assets.py  clip_routes.py  clusters.py  config_routes.py  faces.py  jobs.py  presets.py  search.py
src/takeout_rater/clustering/: __init__.py  builder.py  clip_builder.py  embedding_map.py  phash.py  similarity.py
src/takeout_rater/db/: __init__.py  connection.py  queries.py  schema.py
src/takeout_rater/faces/: __init__.py  clustering.py  detector.py  similarity.py
src/takeout_rater/indexing/: __init__.py  run.py  scanner.py  sidecar.py  thumbnailer.py
src/takeout_rater/scorers/: base.py  brisque.py  cafe_style.py  clip_iqa.py  clip_vocab.py  laion.py  nima.py  nsfw.py  pyiqa_adapter.py  registry.py  simple.py
src/takeout_rater/scoring/: __init__.py  phash.py  pipeline.py
tests/: conftest.py  test_aesthetic_scorer.py  test_blur_scorer.py  test_brisque_scorer.py  test_cafe_style_scorer.py  test_cli.py  test_clip_clustering.py  test_clip_iqa_scorer.py  test_clustering.py  test_clustering_db.py  test_config_api.py  test_db.py  test_dummy_scorer.py  test_embedding_map.py  test_faces.py  test_indexer.py  test_infer_takeout_sidecar_schema.py  test_jobs_api.py  test_launcher.py  test_luminosity_scorer.py  test_nima_scorer.py  test_noise_scorer.py  test_nsfw_scorer.py  test_parallel_pipeline.py  test_phash.py  test_pipeline.py  test_pyiqa_scorer.py  test_registry.py  test_scanner.py  test_scoring_db.py  test_search.py  test_sidecar_parser.py  test_simple_scorer.py  test_thumbnailer.py  test_view_presets_db.py  test_web_ui.py
tests/api/: test_config_api.py  test_jobs_api.py  test_search.py
tests/clustering/: test_clustering.py  test_embedding_map.py
tests/db/: test_clustering_db.py  test_db.py
tests/faces/: test_faces.py
tests/indexing/: test_indexer.py  test_scanner.py  test_sidecar_parser.py  test_thumbnailer.py
tests/scoring/: test_pipeline.py
tests/scripts/: test_launcher.py
tests/slow/: __init__.py  test_embedding_map_slow.py  test_indexer_slow.py  test_jobs_api_slow.py  test_pipeline_slow.py  test_web_ui_slow.py
tests/ui/: test_web_ui.py
(+83 files in other folders)
