[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "takeout-rater"
version = "0.1.0"
description = "Aesthetics scoring orchestrator for Google Photos Takeout folders"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# Core image handling (required for thumbnail generation during indexing)
index = [
    "Pillow>=10.0",
]
# Web UI dependencies (required for the browse command)
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "aiofiles>=23.0",
]
# Heavyweight ML scorer dependencies (installed per scorer family)
aesthetic = [
    "torch>=2.2",
    "torchvision>=0.17",
    "open-clip-torch>=2.24",
    "Pillow>=10.0",
    "huggingface-hub>=0.20",
]
heic = [
    "pillow-heif>=0.16",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.26",
    "Pillow>=10.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
]

[project.scripts]
takeout-rater = "takeout_rater.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
